correccion de css

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Mí</title>
-    <link rel="stylesheet" href="/public/styleIndex.css">
+    <link rel="stylesheet" href="styleIndex.css">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         <section class="contenedor seccionuno">
             <div class="organizador-uno">
                 <div class="separadoruno">
-                    <a href="/"><img src="/public/img/den.JPG" alt="Icono seguridad"></a>
+                    <a href="/"><img src="img/den.JPG" alt="Icono seguridad"></a>
                 </div>
                 <div class="separadoruno">
                     <h3>Lugar de nacimiento</h3>
@@ -39,7 +39,7 @@
 
                 </div>
                 <div class="separadoruno">
-                    <a href="/"><img src="/public/img/fam.JPG" alt="Icono seguridad"></a>
+                    <a href="/"><img src="img/fam.JPG" alt="Icono seguridad"></a>
                 </div>
                 <div class="separadoruno">
                     <h3>Mi familia</h3>
@@ -70,7 +70,7 @@
             </p>
             <p>Hasta ahora siento que logrado salir adelante por haberme enfrentado a mis propios retos. ¿Me siento satisfecha con lo que he conseguido? Por el momento sí. Por ahora en la Universidad hasta ahora he aprendido muchas lecciones que me están ayudado a mejorar en diferenetes aspectos...cosa que si no estuviera en el lugar que estoy hoy en día no lo hubiese logrado.</p>
             
-            <a href="/"><img src="/PUBLIC/img/tecnologias.jpg" alt="Icono seguridad"></a>
+            <a href="/"><img src="img/tecnologias.jpg" alt="Icono seguridad"></a>
 
 
         </main>
@@ -84,7 +84,7 @@
             <div class="seccion-paises">
                 <div class="icono">
                     <video width="300" height="240" controls>
-                    <source src="/public/videos/paris.mp4" type="video/mp4">
+                    <source src="videos/paris.mp4" type="video/mp4">
                   </video>
                     <h3> Francia</h3>
                     <p>Francia es un país que lo tiene todo: ciudades maravillosas, pueblos llenos de encanto, paisajes espectaculares, historia y una deliciosa gastronomía. Son algunas de las razones por las que me animo a querer visitarlo.</p>
@@ -92,7 +92,7 @@
 
                 <div class="icono">
                     <video width="300" height="240" controls>
-                    <source src="/public/videos//venecia.mp4" type="video/mp4">
+                    <source src="videos//venecia.mp4" type="video/mp4">
                   </video>
 
                     <h3>Venecia</h3>
@@ -101,7 +101,7 @@
                 <div class="icono">
 
                     <video width="300" height="240" controls>
-                    <source src="/public/videos//roma.mp4" type="video/mp4">
+                    <source src="videos//roma.mp4" type="video/mp4">
                   </video>
 
                     <h3>Roma</h3>
@@ -114,23 +114,23 @@
             <div class="organizador-uno">
                 <div class="separadoruno">
 
-                    <a href="/"><img src="/public/img/headerActualidad.jpg" alt="Icono seguridad"></a>
+                    <a href="/"><img src="img/headerActualidad.jpg" alt="Icono seguridad"></a>
 
                 </div>
 
                 <div class="separadoruno">
 
-                    <a href="/"><img src="/public/img/Familia.JPG" alt="Icono seguridad"></a>
+                    <a href="/"><img src="img/Familia.JPG" alt="Icono seguridad"></a>
 
                 </div>
                 <div class="separadoruno">
 
-                    <a href="/"><img src="/public/img/ut3.jpeg" alt="Icono seguridad"></a>
+                    <a href="/"><img src="img/ut3.jpeg" alt="Icono seguridad"></a>
 
                 </div>
                 <div class="separadoruno">
 
-                    <a href="/"><img src="/public/img/ut4.jpeg" alt="Icono seguridad"></a>
+                    <a href="/"><img src="img/ut4.jpeg" alt="Icono seguridad"></a>
 
                 </div>
             </div>
